<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IceJam</string>
    <string name="main_play">Continue</string>
    <string name="main_challenges">Challenges</string>
    <string name="main_settings">Settings</string>
    <string name="challenges_title">Select Challenge</string>
    <string name="level_title">Select Level</string>
    <string name="settings_title">Settings</string>
    <string name="settings_clear_history">Clear history</string>
    <string name="settings_dialog_text">Are you sure you want to delete all the records in the history?</string>
    <string name="settings_dialog_yes">YES</string>
    <string name="settings_dialog_no">NO</string>
    <string name="game_level">Level</string>
    <string name="game_moves">Moves:</string>
    <string name="game_best">Best:</string>
    <string name="game_timer">Time:</string>
    <string name="game_timer_best">Best:</string>
    <string name="game_next">Next</string>
    <string name="game_previous">Previous</string>
    <string name="dialog_moves">Number of moves:</string>
    <string name="dialog_best">Previous record:</string>
    <string name="dialog_time">Time:</string>
    <string name="dialog_time_best">Previous record:</string>
    <string name="dialog_ntimes">Number of times solved:</string>
    <string name="dialog_goto_next">Next</string>
    <string name="dialog_goto_menu">Menu</string>
    <string name="dialog_goto_retry">Retry</string>
</resources>
