<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minHeight="200dp"
              android:padding="20dp"
              android:layout_gravity="center"
              android:gravity="center_horizontal">

    <ImageView
            android:id="@+id/dialogImage"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/levelsolved" />

    <TextView android:id="@+id/dialogMoves"
              android:layout_weight="1"
              android:text="@string/dialog_moves"
              android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:layout_marginTop="10dp"
              android:textSize="12dp" />

    <TextView android:id="@+id/dialogBest"
              android:layout_weight="1"
              android:text="@string/dialog_best"
              android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:textSize="12dp" />

    <TextView android:id="@+id/dialogTime"
              android:layout_weight="1"
              android:text="@string/dialog_time"
              android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:textSize="12dp" />

    <TextView android:id="@+id/dialogTimeBest"
              android:layout_weight="1"
              android:text="@string/dialog_time_best"
              android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:textSize="12dp" />

    <TextView android:id="@+id/dialogNTimes"
              android:layout_weight="1"
              android:text="@string/dialog_ntimes"
              android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:textSize="12dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_weight="4"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:layout_gravity="center"
                  android:gravity="center_horizontal">
        <Button
                android:id="@+id/dialogButtonMenu"
                android:layout_weight="1"
                android:layout_width="64px"
                android:layout_height="64px"
                android:background="@drawable/home"
                android:text="@string/dialog_goto_menu"
                android:soundEffectsEnabled="true"
                />

        <Button
                android:id="@+id/dialogButtonRetry"
                android:layout_weight="1"
                android:layout_width="64px"
                android:layout_height="64px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/dialog_goto_retry"
                android:background="@drawable/reload"
                android:soundEffectsEnabled="true" />

        <Button
                android:id="@+id/dialogButtonNext"
                android:layout_weight="1"
                android:layout_width="64px"
                android:layout_height="64px"
                android:text="@string/dialog_goto_next"
                android:background="@drawable/next"
                android:soundEffectsEnabled="true" />
    </LinearLayout>
</LinearLayout>