<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minHeight="200dp"
              android:padding="20dp"
              android:layout_gravity="center"
              android:gravity="center_horizontal">

    <TextView android:id="@+id/dialogText"
              android:layout_weight="1"
              android:text="@string/settings_dialog_text"
              android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:layout_marginTop="10dp"
              android:textSize="12dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_weight="4"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:layout_gravity="center"
                  android:gravity="center_horizontal">
        <Button
                android:id="@+id/dialogButtonYes"
                android:layout_weight="1"
                android:layout_width="128px"
                android:layout_height="64px"
                android:background="@drawable/button"
                android:text="@string/settings_dialog_yes"
                android:soundEffectsEnabled="true"
                />

        <Button
                android:id="@+id/dialogButtonNo"
                android:layout_weight="1"
                android:layout_width="128px"
                android:layout_height="64px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/settings_dialog_no"
                android:background="@drawable/button"
                android:soundEffectsEnabled="true" />
    </LinearLayout>
</LinearLayout>